PDFexport Fix Spacing and page creation

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     max-width: 800px;
     margin: 0 auto;
     aspect-ratio: 2 / 1;
-    background-color: white;
+    background-color: white !important;
     border: 2px solid rgb(216, 216, 216);
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -45,6 +45,7 @@ header {
     left: 5%;
     width: 90%;
     height: 90%;
+    background-color: white;
     border: 2px solid black;
     box-sizing: border-box;
     border-radius: 4px;
